Adição de Delete e Read simples de documentos de requisitos
